--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,6 +13,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Ping for release
+        run: curl https://sum.golang.org/lookup/github.com/teadove/go-phone-iso3166@v1.0.2
+
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
